[2단계 - 로또(수동)] 야호(최지연) 미션 제출합니다. (#472)
* docs: 희봉의 두번째 리뷰에 따른 수정사항 정리

* refactor: Number, WinningNumber 에 대한 equals() 를 오버라이딩해 같은 숫자일 경우 같은 값으로 인지하도록 리팩터링

* refactor: Number, WinningNumber 에 대한 equals() 를 오버라이딩해 같은 숫자일 경우 같은 값으로 인지하도록 리팩터링

* refactor: getPrize()와 getPrizeByCount() 를 하나로 통합

* docs: 2단계 미션을 위한 기능 요구사항 작성

* style: 로또에 사용되는 숫자를 Lotto Ball 로 변경

* style: 기존의 Lotto 를 AutoLotto 로 변경

* refactor: 상수에 private static final 추가

* refactor: 패키지 이동 후 불필요한 import 문 삭제

* feat: AutoLotto 와 ManualLotto 의 기반이 될 Lotto 생성, 예외 처리

1. 6개의 LottoBall 로 구성
2. 서로 다른 LottoBall 로 구성

* feat: LottoBall 을 정렬하기 위해 compareTo 오버라이드

* refactor: Lotto 의 정적 팩터리 메서드를 생성하고, 생성자를 private 으로 변경

* refactor: AutoLotto 에서 로또의 숫자 타입으로 사용되던 Integer 를 LottoBall 로 변경

* refactor: 입력 값에 포함된 공백 처리

* refactor: AutoLotto 에서 로또의 숫자 타입으로 사용되던 Integer 를 LottoBall 로 변경

* refactor: AutoLotto 를 Lotto 로 변경하고, 수동 생성 로또 기능 추가

* refactor: 로또 개수 입력에 대한 유효 검사를 InputView 에서 진행하여 예외 입력시 바로 에러 처리

* refactor: 기존에 생성해둔 private 메서드 활용

* refactor: AutoLotto 를 Lotto 로 변경

* style: Number 를 LottoBall 로 변경

* style: Number 를 LottoBall 로 변경

* refactor: 로또 구매 내역 출력

* style: 오름차순으로 재정렬

* refactor: 로또 개수 입력에 대한 유효 검사를 InputView 에서 진행하며 불필요해진 테스트 삭제

* refactor: LottoBall 이 생기며 불필요해진 WinningBall 삭제, LottoBall 로 대체

* refactor: 예외 입력시 에러 메세지를 출력하고, 재입력을 요구

* style: 입력 요구 사항 간 간격 추가

* docs: 2단계 미션을 위한 요구사항 목록 체크

* style: import 문 정리, 문맥에 맞는 공백 추가, 사용 순서에 따라 상수 정리

* style: 의미를 명확하게 나타내는 변수명으로 변경

* style: 의미를 명확하게 나타내는 패키지명으로 변경

* docs: github 소스코드 탭사이즈 설정

* test: Stream 중간 연산자, 종단 연산자에 대한 학습 테스트

* test: String 과 StringBuilder 에 대한 학습 테스트

* refactor: stream 으로 대체 가능한 for 문 수정

* test: Money 의 rate() 에 대한 테스트 추가

* refactor: 배열 대신 List 사용

* refactor: WinningBalls 를 Lotto winningBalls 로 변경

* refactor: 관련된 클래스끼리 다시 패키징

* refactor: 자동 로또와 수동 로또 생성자를 각각 정적 팩터리 메서드로 생성

* test: Lotto 의 countTickets(), match(), contains() 에 대한